test/fails/bad_parsing/bad_function9.lgl
int f(x) { //Must include a type
    return 0;
}

void main() {
    return;
}